--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2>6. Contact Information:</h2>
         <p><strong>How to Contact Us:</strong></p>
         <p>If you have any questions about this Privacy Policy or our data practices, please contact us at:</p>
-        <p>Bonanza<br>
+        <p>Bonanza-EG<br>
             sherif.bialy@bonanza-eg.co<br>
             +201000497788</p>
 
